package behavioral.observer.CA4;

public interface IObserver {
    void nhanTinMoi(TinTuc tin);
    void nhanTinCapNhat(TinTuc tin);
}
